@@ -16,7 +16,7 @@ import org.zalando.nakadiproducer.eventlog.CompactionKeyExtractor;
 import org.zalando.nakadiproducer.flowid.FlowIdComponent;
 import org.zalando.nakadiproducer.eventlog.EventLogWriter;
 
-import javax.transaction.Transactional;
+import jakarta.transaction.Transactional;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -58,9 +58,9 @@ public class EventLogWriterImpl implements EventLogWriter {
         Preconditions.checkArgument(!list.isEmpty());
         if(list.size() == 1) {
             // the most common case: just one extractor per event type.
-            return list.get(0);
+            return list.getFirst();
         } else {
-            return CompactionKeyExtractor.ofOptional(list.get(0).getEventType(),
+            return CompactionKeyExtractor.ofOptional(list.getFirst().getEventType(),
                     o -> list.stream()
                             .flatMap(ex -> ex.tryGetKeyFor(o).stream())
                             .findAny()
